--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "445f28f2",
       "metadata": {
         "id": "445f28f2"
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "eQ-KvN1mFTHv",
       "metadata": {
         "id": "eQ-KvN1mFTHv"
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "U6IZcuatFTHw",
       "metadata": {
         "id": "U6IZcuatFTHw",
@@ -187,7 +187,7 @@
               "4         79084.10       0  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "1StA5Q2qFTHw",
       "metadata": {
         "id": "1StA5Q2qFTHw"
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "3556719d",
       "metadata": {
         "id": "3556719d",
@@ -344,7 +344,7 @@
               "4          1               1         79084.10       0  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -355,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "id": "MGGQXJfQFTHy",
       "metadata": {
         "id": "MGGQXJfQFTHy",
@@ -586,7 +586,7 @@
               "[10000 rows x 11 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "id": "d0732ebb",
       "metadata": {
         "id": "d0732ebb"
@@ -614,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "da903f52",
       "metadata": {
         "id": "da903f52",
@@ -633,7 +633,7 @@
               "       [1., 0., 0.]])"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -644,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "id": "b107b043",
       "metadata": {
         "id": "b107b043",
@@ -658,7 +658,7 @@
               "      dtype=object)"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "id": "a7b53262",
       "metadata": {
         "id": "a7b53262",
@@ -791,7 +791,7 @@
               "[10000 rows x 3 columns]"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -803,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "id": "e0285a3d",
       "metadata": {
         "id": "e0285a3d"
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "id": "4493f239",
       "metadata": {
         "id": "4493f239",
@@ -967,7 +967,7 @@
               "4                0.0              1.0  "
             ]
           },
-          "execution_count": 14,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -978,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "id": "a3724619",
       "metadata": {
         "id": "a3724619"
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "id": "c3927901",
       "metadata": {
         "id": "c3927901"
@@ -1008,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "id": "2af696e8",
       "metadata": {
         "id": "2af696e8"
@@ -1020,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "id": "5443972f",
       "metadata": {
         "id": "5443972f"
@@ -1033,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "id": "b7d79c09",
       "metadata": {
         "id": "b7d79c09"
@@ -1049,7 +1049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "id": "4d82e8c7",
       "metadata": {
         "id": "4d82e8c7",
@@ -1062,7 +1062,7 @@
               "((8000, 12), (2000, 12), (8000,), (2000,))"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1073,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "id": "3476c499",
       "metadata": {
         "id": "3476c499",
@@ -1098,7 +1098,7 @@
               "         1.72572313, -0.57638802]])"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1109,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "id": "fce24d73",
       "metadata": {
         "id": "fce24d73"
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "id": "9d036c35",
       "metadata": {},
       "outputs": [],
@@ -1143,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 22,
       "id": "8c039618",
       "metadata": {},
       "outputs": [
@@ -1153,7 +1153,7 @@
               "12"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1164,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 23,
       "id": "6835539a",
       "metadata": {},
       "outputs": [
@@ -1172,7 +1172,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\saksh\\OneDrive\\Desktop\\ANN Project\\venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:93: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "c:\\Users\\saksh\\anaconda3\\envs\\tf_env\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:93: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
             "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
           ]
         }
@@ -1188,7 +1188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 24,
       "id": "cab81bc0",
       "metadata": {},
       "outputs": [
@@ -1280,17 +1280,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 25,
       "id": "d9c33f0a",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<LossFunctionWrapper(<function binary_crossentropy at 0x000001BD34A7BB00>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
+              "<LossFunctionWrapper(<function binary_crossentropy at 0x000001639133CC20>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1304,7 +1304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 26,
       "id": "7e383f45",
       "metadata": {},
       "outputs": [],
@@ -1315,7 +1315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 27,
       "id": "2a4bc9a0",
       "metadata": {},
       "outputs": [],
@@ -1329,7 +1329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 28,
       "id": "3ea04715",
       "metadata": {},
       "outputs": [],
@@ -1344,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 29,
       "id": "a050f43e",
       "metadata": {},
       "outputs": [
@@ -1353,33 +1353,31 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.8059 - loss: 0.4499 - val_accuracy: 0.8550 - val_loss: 0.3530\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 12ms/step - accuracy: 0.8160 - loss: 0.4406 - val_accuracy: 0.8540 - val_loss: 0.3532\n",
             "Epoch 2/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8549 - loss: 0.3516 - val_accuracy: 0.8550 - val_loss: 0.3518\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 10ms/step - accuracy: 0.8553 - loss: 0.3552 - val_accuracy: 0.8595 - val_loss: 0.3422\n",
             "Epoch 3/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8566 - loss: 0.3445 - val_accuracy: 0.8580 - val_loss: 0.3422\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8583 - loss: 0.3430 - val_accuracy: 0.8610 - val_loss: 0.3366\n",
             "Epoch 4/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8606 - loss: 0.3412 - val_accuracy: 0.8615 - val_loss: 0.3402\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8673 - loss: 0.3326 - val_accuracy: 0.8635 - val_loss: 0.3371\n",
             "Epoch 5/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.8562 - loss: 0.3485 - val_accuracy: 0.8515 - val_loss: 0.3559\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8574 - loss: 0.3391 - val_accuracy: 0.8605 - val_loss: 0.3431\n",
             "Epoch 6/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8603 - loss: 0.3335 - val_accuracy: 0.8620 - val_loss: 0.3600\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.8636 - loss: 0.3303 - val_accuracy: 0.8650 - val_loss: 0.3391\n",
             "Epoch 7/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8577 - loss: 0.3464 - val_accuracy: 0.8595 - val_loss: 0.3518\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8613 - loss: 0.3373 - val_accuracy: 0.8590 - val_loss: 0.3500\n",
             "Epoch 8/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8567 - loss: 0.3365 - val_accuracy: 0.8555 - val_loss: 0.3480\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8624 - loss: 0.3379 - val_accuracy: 0.8570 - val_loss: 0.3515\n",
             "Epoch 9/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8616 - loss: 0.3344 - val_accuracy: 0.8550 - val_loss: 0.3513\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8574 - loss: 0.3375 - val_accuracy: 0.8610 - val_loss: 0.3454\n",
             "Epoch 10/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8640 - loss: 0.3464 - val_accuracy: 0.8605 - val_loss: 0.3447\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8626 - loss: 0.3278 - val_accuracy: 0.8615 - val_loss: 0.3448\n",
             "Epoch 11/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - accuracy: 0.8690 - loss: 0.3219 - val_accuracy: 0.8630 - val_loss: 0.3475\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8586 - loss: 0.3371 - val_accuracy: 0.8600 - val_loss: 0.3545\n",
             "Epoch 12/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 5ms/step - accuracy: 0.8727 - loss: 0.3182 - val_accuracy: 0.8590 - val_loss: 0.3502\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8690 - loss: 0.3195 - val_accuracy: 0.8710 - val_loss: 0.3494\n",
             "Epoch 13/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8716 - loss: 0.3198 - val_accuracy: 0.8555 - val_loss: 0.3512\n",
-            "Epoch 14/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8677 - loss: 0.3190 - val_accuracy: 0.8575 - val_loss: 0.3651\n"
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8687 - loss: 0.3146 - val_accuracy: 0.8610 - val_loss: 0.3478\n"
           ]
         }
       ],
@@ -1395,7 +1393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 32,
       "id": "e6d9ad36",
       "metadata": {},
       "outputs": [
@@ -1483,7 +1481,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "tf_env",
       "language": "python",
       "name": "python3"
     },
@@ -1497,7 +1495,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.11.13"
     }
   },
   "nbformat": 4,
