--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1287,7 +1287,7 @@
         {
           "data": {
             "text/plain": [
-              "<LossFunctionWrapper(<function binary_crossentropy at 0x000001639133CC20>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
+              "<LossFunctionWrapper(<function binary_crossentropy at 0x000002A4FC75CAE0>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
             ]
           },
           "execution_count": 25,
@@ -1353,31 +1353,49 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 12ms/step - accuracy: 0.8160 - loss: 0.4406 - val_accuracy: 0.8540 - val_loss: 0.3532\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 10ms/step - accuracy: 0.7905 - loss: 0.4413 - val_accuracy: 0.8445 - val_loss: 0.3689\n",
             "Epoch 2/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 10ms/step - accuracy: 0.8553 - loss: 0.3552 - val_accuracy: 0.8595 - val_loss: 0.3422\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8556 - loss: 0.3537 - val_accuracy: 0.8535 - val_loss: 0.3576\n",
             "Epoch 3/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8583 - loss: 0.3430 - val_accuracy: 0.8610 - val_loss: 0.3366\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8554 - loss: 0.3507 - val_accuracy: 0.8575 - val_loss: 0.3494\n",
             "Epoch 4/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8673 - loss: 0.3326 - val_accuracy: 0.8635 - val_loss: 0.3371\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8572 - loss: 0.3423 - val_accuracy: 0.8560 - val_loss: 0.3515\n",
             "Epoch 5/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8574 - loss: 0.3391 - val_accuracy: 0.8605 - val_loss: 0.3431\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8686 - loss: 0.3267 - val_accuracy: 0.8600 - val_loss: 0.3534\n",
             "Epoch 6/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.8636 - loss: 0.3303 - val_accuracy: 0.8650 - val_loss: 0.3391\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8646 - loss: 0.3351 - val_accuracy: 0.8620 - val_loss: 0.3460\n",
             "Epoch 7/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8613 - loss: 0.3373 - val_accuracy: 0.8590 - val_loss: 0.3500\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8610 - loss: 0.3355 - val_accuracy: 0.8535 - val_loss: 0.3701\n",
             "Epoch 8/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8624 - loss: 0.3379 - val_accuracy: 0.8570 - val_loss: 0.3515\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - accuracy: 0.8615 - loss: 0.3389 - val_accuracy: 0.8555 - val_loss: 0.3537\n",
             "Epoch 9/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8574 - loss: 0.3375 - val_accuracy: 0.8610 - val_loss: 0.3454\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8700 - loss: 0.3232 - val_accuracy: 0.8580 - val_loss: 0.3412\n",
             "Epoch 10/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8626 - loss: 0.3278 - val_accuracy: 0.8615 - val_loss: 0.3448\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8664 - loss: 0.3277 - val_accuracy: 0.8595 - val_loss: 0.3424\n",
             "Epoch 11/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8586 - loss: 0.3371 - val_accuracy: 0.8600 - val_loss: 0.3545\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - accuracy: 0.8702 - loss: 0.3191 - val_accuracy: 0.8580 - val_loss: 0.3435\n",
             "Epoch 12/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8690 - loss: 0.3195 - val_accuracy: 0.8710 - val_loss: 0.3494\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3271 - val_accuracy: 0.8580 - val_loss: 0.3367\n",
             "Epoch 13/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8687 - loss: 0.3146 - val_accuracy: 0.8610 - val_loss: 0.3478\n"
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3222 - val_accuracy: 0.8600 - val_loss: 0.3545\n",
+            "Epoch 14/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - accuracy: 0.8593 - loss: 0.3271 - val_accuracy: 0.8575 - val_loss: 0.3479\n",
+            "Epoch 15/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8627 - loss: 0.3269 - val_accuracy: 0.8585 - val_loss: 0.3608\n",
+            "Epoch 16/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8641 - loss: 0.3199 - val_accuracy: 0.8520 - val_loss: 0.3530\n",
+            "Epoch 17/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8621 - loss: 0.3288 - val_accuracy: 0.8565 - val_loss: 0.3586\n",
+            "Epoch 18/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8658 - loss: 0.3178 - val_accuracy: 0.8595 - val_loss: 0.3551\n",
+            "Epoch 19/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8670 - loss: 0.3148 - val_accuracy: 0.8500 - val_loss: 0.3667\n",
+            "Epoch 20/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 10ms/step - accuracy: 0.8650 - loss: 0.3231 - val_accuracy: 0.8560 - val_loss: 0.3623\n",
+            "Epoch 21/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8717 - loss: 0.3057 - val_accuracy: 0.8560 - val_loss: 0.3687\n",
+            "Epoch 22/100\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 15ms/step - accuracy: 0.8725 - loss: 0.3035 - val_accuracy: 0.8585 - val_loss: 0.3645\n"
           ]
         }
       ],
@@ -1393,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 31,
       "id": "e6d9ad36",
       "metadata": {},
       "outputs": [
