--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1109,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 31,
       "id": "fce24d73",
       "metadata": {
         "id": "fce24d73"
@@ -1287,7 +1287,7 @@
         {
           "data": {
             "text/plain": [
-              "<LossFunctionWrapper(<function binary_crossentropy at 0x000002A4FC75CAE0>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
+              "<LossFunctionWrapper(<function binary_crossentropy at 0x00000227D00DCAE0>, kwargs={'from_logits': False, 'label_smoothing': 0.0, 'axis': -1})>"
             ]
           },
           "execution_count": 25,
@@ -1353,49 +1353,49 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 10ms/step - accuracy: 0.7905 - loss: 0.4413 - val_accuracy: 0.8445 - val_loss: 0.3689\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - accuracy: 0.8032 - loss: 0.4424 - val_accuracy: 0.8525 - val_loss: 0.3630\n",
             "Epoch 2/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8556 - loss: 0.3537 - val_accuracy: 0.8535 - val_loss: 0.3576\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8478 - loss: 0.3616 - val_accuracy: 0.8610 - val_loss: 0.3423\n",
             "Epoch 3/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8554 - loss: 0.3507 - val_accuracy: 0.8575 - val_loss: 0.3494\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8539 - loss: 0.3528 - val_accuracy: 0.8615 - val_loss: 0.3469\n",
             "Epoch 4/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8572 - loss: 0.3423 - val_accuracy: 0.8560 - val_loss: 0.3515\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8581 - loss: 0.3430 - val_accuracy: 0.8520 - val_loss: 0.3523\n",
             "Epoch 5/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8686 - loss: 0.3267 - val_accuracy: 0.8600 - val_loss: 0.3534\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8520 - loss: 0.3408 - val_accuracy: 0.8620 - val_loss: 0.3421\n",
             "Epoch 6/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8646 - loss: 0.3351 - val_accuracy: 0.8620 - val_loss: 0.3460\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - accuracy: 0.8678 - loss: 0.3300 - val_accuracy: 0.8555 - val_loss: 0.3528\n",
             "Epoch 7/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8610 - loss: 0.3355 - val_accuracy: 0.8535 - val_loss: 0.3701\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 9ms/step - accuracy: 0.8651 - loss: 0.3305 - val_accuracy: 0.8620 - val_loss: 0.3424\n",
             "Epoch 8/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - accuracy: 0.8615 - loss: 0.3389 - val_accuracy: 0.8555 - val_loss: 0.3537\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8626 - loss: 0.3375 - val_accuracy: 0.8610 - val_loss: 0.3439\n",
             "Epoch 9/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8700 - loss: 0.3232 - val_accuracy: 0.8580 - val_loss: 0.3412\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8666 - loss: 0.3313 - val_accuracy: 0.8545 - val_loss: 0.3627\n",
             "Epoch 10/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8664 - loss: 0.3277 - val_accuracy: 0.8595 - val_loss: 0.3424\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.8732 - loss: 0.3173 - val_accuracy: 0.8525 - val_loss: 0.3508\n",
             "Epoch 11/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - accuracy: 0.8702 - loss: 0.3191 - val_accuracy: 0.8580 - val_loss: 0.3435\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.8645 - loss: 0.3313 - val_accuracy: 0.8545 - val_loss: 0.3516\n",
             "Epoch 12/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3271 - val_accuracy: 0.8580 - val_loss: 0.3367\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8694 - loss: 0.3204 - val_accuracy: 0.8635 - val_loss: 0.3409\n",
             "Epoch 13/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3222 - val_accuracy: 0.8600 - val_loss: 0.3545\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8667 - loss: 0.3314 - val_accuracy: 0.8550 - val_loss: 0.3515\n",
             "Epoch 14/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - accuracy: 0.8593 - loss: 0.3271 - val_accuracy: 0.8575 - val_loss: 0.3479\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8665 - loss: 0.3256 - val_accuracy: 0.8550 - val_loss: 0.3429\n",
             "Epoch 15/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8627 - loss: 0.3269 - val_accuracy: 0.8585 - val_loss: 0.3608\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8692 - loss: 0.3122 - val_accuracy: 0.8575 - val_loss: 0.3566\n",
             "Epoch 16/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - accuracy: 0.8641 - loss: 0.3199 - val_accuracy: 0.8520 - val_loss: 0.3530\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8702 - loss: 0.3136 - val_accuracy: 0.8475 - val_loss: 0.3614\n",
             "Epoch 17/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.8621 - loss: 0.3288 - val_accuracy: 0.8565 - val_loss: 0.3586\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8659 - loss: 0.3191 - val_accuracy: 0.8600 - val_loss: 0.3474\n",
             "Epoch 18/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8658 - loss: 0.3178 - val_accuracy: 0.8595 - val_loss: 0.3551\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8743 - loss: 0.3029 - val_accuracy: 0.8570 - val_loss: 0.3559\n",
             "Epoch 19/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8670 - loss: 0.3148 - val_accuracy: 0.8500 - val_loss: 0.3667\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8646 - loss: 0.3184 - val_accuracy: 0.8575 - val_loss: 0.3460\n",
             "Epoch 20/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 10ms/step - accuracy: 0.8650 - loss: 0.3231 - val_accuracy: 0.8560 - val_loss: 0.3623\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8769 - loss: 0.3009 - val_accuracy: 0.8620 - val_loss: 0.3533\n",
             "Epoch 21/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - accuracy: 0.8717 - loss: 0.3057 - val_accuracy: 0.8560 - val_loss: 0.3687\n",
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.8717 - loss: 0.3026 - val_accuracy: 0.8575 - val_loss: 0.3513\n",
             "Epoch 22/100\n",
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 15ms/step - accuracy: 0.8725 - loss: 0.3035 - val_accuracy: 0.8585 - val_loss: 0.3645\n"
+            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.8786 - loss: 0.2973 - val_accuracy: 0.8565 - val_loss: 0.3545\n"
           ]
         }
       ],
@@ -1411,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 30,
       "id": "e6d9ad36",
       "metadata": {},
       "outputs": [
