--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1499,7 +1499,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "tf_env",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1513,7 +1513,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.13"
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
